<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/dashboard_title"
        android:icon="@android:drawable/ic_menu_view" />
    <item
        android:id="@+id/nav_scan"
        android:title="@string/scan_title"
        android:icon="@android:drawable/ic_menu_search" />
    <item
        android:id="@+id/nav_clean"
        android:title="@string/clean_title"
        android:icon="@android:drawable/ic_menu_delete" />
    <item
        android:id="@+id/nav_stats"
        android:title="@string/stats_title"
        android:icon="@android:drawable/ic_menu_sort_by_size" />
    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings_title"
        android:icon="@android:drawable/ic_menu_preferences" />
</menu>

